--- a/generate_feedback_report.Rmd
+++ b/generate_feedback_report.Rmd
@@ -1,5 +1,7 @@
 ---
 title: "PhenoNetz-Ergebnisse"
+date: "`r format(Sys.time(), '%d. %B %Y')`"
+author: "FETZ Köln"
 fontsize: 8 pt
 output:
   beamer_presentation: default
@@ -26,10 +28,10 @@ library(qgraph)
 library(scales)
 
 # some parameters to set: 
+participant_code <- "UKK1VIZYJMBRRACL" # participant code (in "")
+
 alpha <-
   .01 # significance level for thresholding in networks
-
-ID <- 20 # participant ID
 
 smooth <- TRUE # should trend in time-series be included?
 
@@ -75,8 +77,16 @@ removeLinearTrends <- function(df) {
 }
 
 # load data
-Questionnaire_Abfrage <- read_csv("Questionnaire_Abfrage.csv")
-data <- Questionnaire_Abfrage
+data <- read_csv("Questionnaire_Abfrage.csv")
+participant_ids <- read_csv("Participants_Study_Time_Range.csv")
+
+# convert participant code to participant ID 
+participant_id <- participant_ids %>%
+  filter(Participant_Code == participant_code) %>%
+  select(Participant_ID) %>%
+  as.numeric()
+  
+
 label_vars = c(
   "Ich bin traurig",
   "Ich nehme Dinge wahr, die andere \n    Menschen nicht wahrnehmen können",
@@ -96,7 +106,7 @@ final_vars <- Vars <- paste0("var_", c(as.character(1:10)))
 model_personalized <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   mutate(
     Day_Study = date_ESM - .$date_ESM[1] + 1,
     DateTime = str_replace(DateTime, "UTC", "CET"),
@@ -145,7 +155,7 @@ model_personalized <- data %>%
 severity_plot <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("1-0")), ~ label_vars) %>%
   select(label_vars) %>%
   summarise_all(mean) %>%
@@ -171,7 +181,7 @@ if(smooth == TRUE){
 most_variable_items <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("1-0")), ~ label_vars) %>%
   select(label_vars) %>%
   summarise_all(sd) %>%
@@ -182,7 +192,7 @@ most_variable_items <- data %>%
 fluctuation_plot <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("1-0")), ~ label_vars) %>%
   select(most_variable_items$Erlebnis, time_ESM) %>%
   pivot_longer(cols = most_variable_items$Erlebnis,
@@ -207,7 +217,7 @@ fluctuation_plot <- data %>%
     most_variable_items <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("1-0")), ~ label_vars) %>%
   select(label_vars) %>%
   summarise_all(sd) %>%
@@ -218,7 +228,7 @@ fluctuation_plot <- data %>%
 fluctuation_plot <- data %>%
   mutate(date_ESM = as.Date(DateTime),
          time_ESM = DateTime) %>%
-  filter(Participant_ID == ID) %>%
+  filter(Participant_ID == participant_id) %>%
   rename_at(vars(matches("1-0")), ~ label_vars) %>%
   select(most_variable_items$Erlebnis, time_ESM) %>%
   pivot_longer(cols = most_variable_items$Erlebnis,
